name:                yi
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/sehqlr/yi-config#readme
license:             BSD3
license-file:        LICENSE
author:              Sam Hatfield
maintainer:          hey@samhatfield.me
copyright:           2018 Sam Hatfield
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable gred
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       yi-core,
                       yi-language
