name:                yim
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/sehqlr/yi-config#readme
license:             BSD3
license-file:        LICENSE
author:              Sam Hatfield
maintainer:          hey@samhatfield.me
copyright:           2018 Sam Hatfield
category:            Yi
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

source-repository head
  type: git
  location: https://github.com/sehqlr/yi-config

executable yim
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5,
                       yi
